prevent stretched-link from showing empty border when in mid-click state on all cards

--- a/web/themes/custom/asulib_barrio/scss/components/cards.scss
+++ b/web/themes/custom/asulib_barrio/scss/components/cards.scss
@@ -26,8 +26,8 @@ extends/_cards.scss
   }
 }
 
-.card-horizontal .stretched-link {
-  opacity: 0;
+.card .stretched-link {
+  opacity: 0 !important;
 }
 
 .card-horizontal .card-content-wrapper {
